Updated the google logo to an image rather than trying to match with a font

--- a/index.html
+++ b/index.html
@@ -22,12 +22,7 @@
     </nav>
    <!-- GOOGLE LOGO-->
     <div id="title">
-    <span class = "g1">G</span>
-    <span class = "o1_e">o</span>
-    <span class = "o2">o</span>
-    <span class = "g1">g</span>
-    <span class = "l">l</span>
-    <span class = "o1_e">e</span>
+        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
     </div>  
 
     <!-- SEARCH BAR -->
